crates/runtime/tests/dynamodb/snapshots/integration__dynamodb__streams__dynamodb_streams_cayenne_file_acceleration.snap
---
source: crates/runtime/tests/dynamodb/streams.rs
expression: formatted
---
+--------------------------+----+
| created_at               | id |
+--------------------------+----+
| 2025-10-12T23:37:16.345Z | 1  |
+--------------------------+----+
