crates/runtime/tests/dynamodb/snapshots/integration__dynamodb__streams__no_accel_schema_empty_immediate_schema.snap
---
source: crates/runtime/tests/dynamodb/streams.rs
expression: formatted
---
+-------------+-----------+-------------+
| column_name | data_type | is_nullable |
+-------------+-----------+-------------+
| id          | Utf8      | YES         |
| name        | Utf8      | YES         |
| version     | Int64     | YES         |
+-------------+-----------+-------------+
