crates/runtime/tests/dynamodb/snapshots/integration__dynamodb__streams__streams_no_schema_empty_data.snap
---
source: crates/runtime/tests/dynamodb/streams.rs
expression: formatted
---
+------+--------+---------+
| id   | name   | version |
+------+--------+---------+
| id-0 | Item 0 | 0       |
| id-1 | Item 1 | 1       |
| id-2 | Item 2 | 2       |
+------+--------+---------+
