crates/runtime/tests/dynamodb/snapshots/integration__dynamodb__streams__test2.snap
---
source: crates/runtime/tests/dynamodb/streams.rs
expression: formatted
---
+------+--------+---------+
| id   | name   | version |
+------+--------+---------+
| id-0 | Item 0 | 0       |
| id-1 | Item 1 | 1       |
| id-2 | Item 2 | 2       |
| id-3 | Item 3 | 3       |
| id-4 | Item 4 | 4       |
| id-5 | Item 5 | 5       |
| id-6 | Item 6 | 6       |
+------+--------+---------+
